[package]
name = "gmsv_neo4j"
description = "Neo4j integration for Garry's Mod servers"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1

[dependencies]
neo4rs = { version = "0.8.0", features = ["serde_json"] }
anyhow = { version = "1.0.98" }
gmod = { git = "https://github.com/Srlion/gmod-rs", rev = "a700815" }
termcolor = "1.4.1"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
dotenv = "0.15.0"
